14389
```scala
class A

class AX {
    def f() { }
}

import Implicits._
val a = new A
a.f()

object Implicits {
    implicit def ax(a: A) = new AX
}
```
```scala
discarding <script preamble>
(fragment of hello.scala):9: error: value f is not a member of this.A
a.f()
   ^
```

I think that either import should fail or (preferred to me, code should be compileable).

2.7.5.final
